--- a/html/style.css
+++ b/html/style.css
@@ -1,4 +1,3 @@
-
 /* pyanocktail css file
  * 
  */
@@ -15,8 +14,17 @@ body
 {
   width: 1000px;
   margin: auto;
-  font-size: 2.2em;
+  font-size: 1.8em;
 }
+section
+{
+	display: inline-block;
+}
+article{
+	display: inline-block;
+	width: 80%;
+}
+
 header
 {
 	position: relative;
@@ -26,7 +34,7 @@ header
 	background: black;
 	color: gold;
 	/*font-size: 0.7em;*/
-	border-radius: 10px;
+	border-radius: 10px 10px 0px 0px;
 	box-shadow: 0 0 5px black;
 	z-index: 2;
 }
@@ -38,14 +46,22 @@ header h1
 	margin-top: 5px;
 	margin-left: 10px;
 }
+
+meter
+{
+	-webkit-transform: rotate(270deg);
+	-moz-transform: rotate(270deg);
+	-o-transform: rotate(270deg);
+	transform: rotate(270deg);
+}
 #command_bar
 {
-	margin-top: 5px;
+/* 	margin-top: 5px; */
 	background-color: #706b64;
-	border-radius:0.2em;
+/* 	border-radius:0.0em 0.0em 0.2em 0.2em; */
 	box-shadow:0 0 5px black;
 	width: 100%;
-	height: 60px;
+/* 	height: 60px; */
 	text-align: center;
 	/*text-align: right;*/
 	z-index: 2;
@@ -57,7 +73,7 @@ header h1
 }
 #command_bar #btgroup
 {
-	margin-top: 5px;
+/* 	margin-top: 15px; */
 	position: relative;
 	margin-left: 200px;
 	margin-right: 10px;
@@ -112,10 +128,10 @@ nav a:hover
     color: #760001;
     border-bottom: 3px solid #760001;
 }
-#control_panel
+#command_panel
 {
 	margin-top: 5px;
-	margin-left: 100px;
+	/*margin-left: 100px;*/
 	font-size: 1.5em;
 	z-index: 1;
 	
@@ -124,22 +140,23 @@ nav a:hover
 aside
 {
     display: inline-block;
+    margin-top: 5px;
     vertical-align: top;
-    width: 100px;
+    width: 180px;
    	top: 100px;
-   	margin-left: 84px;
+   	/*margin-left: 84px;*/
     background-color: #706b64;
     box-shadow: 0px 2px 5px #1c1a19;
     border-radius: 5px;
     padding: 3px;
     color: white;
-    font-size: 0.5em;
+    /*font-size: 0.5em;*/
     z-index: 2;
 }
 select
 {
 	width : 300px;
-	margin-top: 10px;
+/* 	margin-top: 10px; */
 	border-radius: 5px;
 	background-color: #C3C3C3;
 }
@@ -161,7 +178,7 @@ select
 }
 #midiOutList
 {
-	margin-left: 150px;
+	margin-left: 200px;
 	
 }
 option
@@ -172,18 +189,53 @@ option
 #configparams
 {
 	font-size: 0.5em;
-	margin-top: 40px;
-	text-align: center;
+/* 	margin-top: 20px; */
+/* 	margin-bottom: 20px; */
+/* 	text-align: center; */
 }
 #configparams label
 {
 	display: inline-block;
 	margin-left: 10px;
 }
+#midiconf
+{
+/*  	margin-top: 5px; */
+	background-color: #706b64;
+/* 	border-radius:0.2em; */
+	box-shadow:0 0 5px black;
+	width: 100%;
+	text-align: center;
+	/*text-align: right;*/
+	z-index: 2;
+}
+
+#command_buttons
+{
+	margin-top: 1px;
+}
 #command_buttons button
 {
-	width: 100px;
-	height: 50px;
+	width: 180px;
+	height: 143px;
+	font-size: 0.5em;
+	/*float: right;*/
+	/*position: fixed;
+	right: 2px;
+	top: 2px;*/
+	
+}
+#command_buttons2
+{
+	margin-top: 1px;
+	top: 100px;
+	float: right;
+}
+#command_buttons2 button
+{
+	width: 180px;
+	height: 143px;
+	font-size: 0.5em;
 	/*float: right;*/
 	/*position: fixed;
 	right: 2px;
@@ -193,7 +245,8 @@ option
 #piano_keyboard
 {
 	position: relative;
-	margin-left: 100px;
+    border-radius: 5px;
+	/*margin-left: 100px;*/
 }
 footer
 {
@@ -203,14 +256,18 @@ footer
 table 
 {
 	width: 100%;
-	margin-top: 5px;
+/* 	margin-top: 5px; */
 	border-collapse:separate;
 	border-spacing:0px ;
-	border-radius:0.5em;
+	border-radius:0.0em 0.0em 0.5em 0.5em;
 	box-shadow:0 0 5px black;
 	padding:5px;
 	font-size: 0.6em;
 	z-index: 1;
+}
+table caption
+{
+	font-size: 1.6em;
 }
 
 table td , table th 
@@ -218,18 +275,40 @@ table td , table th
 	border:solid 1px black ;
 	box-shadow:0 0 0 1px black, 0 0 3px black;
 }
-
-
-
-table thead :first-child  :first-child
+table input:not(.desc) 
 {
-	border-radius:0.5em 0 0;
+	font-size: 1.0em;
+	text-align: center;
+	background-color: gray;
+	padding:5px;
+	text-shadow:1px 1px 1px white;
+	border: 0px;
+	width: 70px;
+	
 }
 
-table thead :first-child  :last-child  
+table input.desc 
 {
-	border-radius:0 0.5em 0 0;
+    font-size: 1.0em;
+	text-align: center;
+	background-color: gray;
+	padding:5px;
+	text-shadow:1px 1px 1px white;
+	border: 0px;
+	width: 160px;
+	
 }
+
+
+/* table thead :first-child  :first-child */
+/* { */
+/* 	border-radius:0.5em 0 0 0; */
+/* } */
+
+/* table thead :first-child  :last-child   */
+/* { */
+/* 	border-radius:0 0.5em 0 0; */
+/* } */
 
 table tfoot :last-child  :first-child
 {
@@ -238,12 +317,12 @@ table tfoot :last-child  :first-child
 
 table tfoot :last-child  :last-child
 {
-	border-radius:0 0 0.5em ;
+	border-radius:0 0 0.5em 0;
 }
 
 /* etc .... */
 
-tfoot :last-child th , thead :first-child th
+tfoot :last-child th , thead th
 {
 	background:white;
 }
@@ -263,3 +342,200 @@ table tr td button
 	width: 80px;
 	height: 50px;
 }
+a#edit:hover {
+    border-color: #eee;
+}
+.overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    cursor: default;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    visibility: hidden;
+    z-index: 1;
+
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+    -ms-transition: opacity .5s;
+    -o-transition: opacity .5s;
+    transition: opacity .5s;
+}
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+.popup {
+    background-color: #fff;
+    border: 3px solid #fff;
+    display: inline-block;
+    left: 50%;
+    opacity: 0;
+    padding: 15px;
+    position: fixed;
+    text-align: justify;
+    top: 40%;
+    visibility: hidden;
+    z-index: 10;
+
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+
+    -webkit-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -moz-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -ms-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    -o-box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+    box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+
+    -webkit-transition: opacity .5s, top .5s;
+    -moz-transition: opacity .5s, top .5s;
+    -ms-transition: opacity .5s, top .5s;
+    -o-transition: opacity .5s, top .5s;
+    transition: opacity .5s, top .5s;
+}
+.overlay:target+.popup {
+    top: 50%;
+    opacity: 1;
+    visibility: visible;
+}
+.close {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 30px;
+    line-height: 30px;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    text-decoration: none;
+    top: -15px;
+    width: 30px;
+
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border-radius: 15px;
+}
+.close:before {
+    color: rgba(255, 255, 255, 0.9);
+    content: "X";
+    font-size: 24px;
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.9);
+}
+.close:hover {
+    background-color: rgba(64, 128, 128, 0.8);
+}
+.popup p, .popup div {
+    margin-bottom: 10px;
+}
+.popup label {
+    display: inline-block;
+    text-align: center;
+    font-size: 0.6em;
+    margin-left: 20px;
+/*     width: 50px; */
+}
+.popup form{
+    border: 1px solid;
+    border-color: #999 #ccc #ccc;
+    margin: 0;
+    padding: 2px;
+
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+}
+.popup input {
+    border-color: #555 #888 #888;
+    width: 20px;
+    margin-left: 10px;
+}
+.popup select {
+    border-color: #555 #888 #888;
+    width: 120px;
+    margin-left: 10px;
+}
+.hint {
+	font-size: 0.3em;
+}
+
+/* p { */
+/*     font-family: sans-serif; */
+/* } */
+
+table label.custom-select {
+    position: relative;
+    display: inline-block;
+    width: 65%;
+}
+
+    .custom-select select {
+        display: inline-block;
+        border: 2px solid #bbb;
+        padding: 4px 3px 3px 5px;
+        margin: 0;
+        font: inherit;
+        outline:none; /* remove focus ring from Webkit */
+        line-height: 1.2;
+        background: grey;
+        
+        -webkit-appearance:none; /* remove the strong OSX influence from Webkit */
+        
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
+        border-radius: 6px;
+        width: 100%;
+    }
+
+    /* for Webkit's CSS-only solution 
+    @media screen and (-webkit-min-device-pixel-ratio:0) { 
+        .custom-select select {
+            padding-right:30px;    
+        }
+    }*/
+    
+    /* Since we removed the default focus styles, we have to add our own */
+    .custom-select select:focus {
+        -webkit-box-shadow: 0 0 3px 1px #c00;
+        -moz-box-shadow: 0 0 3px 1px #c00;
+        box-shadow: 0 0 3px 1px #c00;
+    }
+    
+    /* Select arrow styling */
+    .custom-select:after {
+        content: "▼";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        font-size: 60%;
+        line-height: 30px;
+        padding: 0 7px;
+        background: #bbb;
+        color: white;
+        
+        pointer-events:none;
+        
+        -webkit-border-radius: 0 6px 6px 0;
+        -moz-border-radius: 0 6px 6px 0;
+        border-radius: 0 6px 6px 0;
+    }
+    
+    .no-pointer-events .custom-select:after {
+        content: none;
+    }
+.hexInput { position: relative; }
+.hexInput label { position: absolute; left: 3px; top: 3px; color: #999; }
+.hexInput input { position: absolute; left: 0; top: 0; padding-left:40px; }
